# egg-shell

./: .editorconfig  .gitignore  .markdownlint.json  Cargo.toml  LICENSE
egg-data/: Cargo.toml
egg-data/src/: ast_decimal_digit.rs  ast_decimal_notation.rs  ast_float.rs  ast_fraction.rs  ast_integer.rs  ast_regex.rs  lib.rs  mutability.rs  visibility_scope.rs
egg-grammar/: Cargo.toml
egg-grammar/examples/: fibonacci.eggsh  trait.egg
egg-grammar/examples/trait/: basic.egg  infer-associated-types.egg  trait-bound-named-parameters.egg  trait-bound-positional-parameters.egg
egg-grammar/src/: abstract_grid.rs  ast.rs  char_cell.rs  char_coord.rs  char_grid.rs  char_grid_access.rs  char_line.rs  char_table.rs  egg.pest  eol.rs  keyword.rs  lib.rs  ordinal.rs  text_segment.rs  text_slice.rs  text_slice_def.rs  token.rs
egg-grammar/src/ast/: build_syntax_tree.rs
egg-grammar/src/char/: char_coord.rs
egg-grammar/src/char_grid/: char_grid_line.rs  completed_char_grid.rs  grid_common.rs  grid_line.rs  lazy.rs  lazy_char_grid.rs
egg-grammar/src/token/: content.rs  ending.rs  indent.rs  invalid.rs  middle.rs  non_indent.rs  parse_simple_token.rs  parse_token.rs  raw.rs  scan.rs  token_line.rs
egg-grammar/tests/: char_grid.rs  char_table.rs  text_slice.rs  token_scan.rs
egg-grammar/tests/fixtures/: examples  hello-world.egg  multi-line.egg
egg-text/: Cargo.toml
egg-text/src/: char.rs  char_grid.rs  char_grid_access.rs  char_grid_error.rs  lib.rs  text_slice.rs
egg-text/tests/: char_grid.rs  char_grid_access.rs  char_grid_slice_from.rs  text_slice.rs
(+204 files in other folders)
