[package]
name = "egg-data"
version = "0.0.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
pipe-trait = "0.4.0"
derive_more = "0.99.17"
serde = { version = "1.0.163", features = ["derive"] }
num = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
