[package]
name = "egg-grammar"
version = "0.0.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
derive_more = "0.99.17"
strum = { version = "0.24.1", features = ["derive"] }
getset = "0.1.2"
pipe-trait = "0.4.0"
assert-cmp = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
utf8-chars = "2.0.3"
