[package]
name = "egg-grammar"
version = "0.0.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
egg-ast = { version = "0.0.0", path = "../egg-ast" }
derive_more = "0.99.17"
pipe-trait = "0.4.0"
itertools = "0.10.5"
strum = { version = "0.24.1", features = ["derive", "phf"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
